--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#logging.level.org.springframework=debug
+
 spring.datasource.url=jdbc:postgresql://localhost/sativa
 spring.datasource.username=sativa
 spring.datasource.password=sativa
@@ -8,3 +10,5 @@ spring.jpa.show-sql=true
 # App Properties
 jwt.signing.key.secret=secretKey
 jwt.token.expiration.in.seconds=86400
+
+
