--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.password=sativa
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
+jwt.http.request.header=Authorization
 
 # App Properties
 jwt.signing.key.secret=secretKey
