--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,12 @@ spring.datasource.username=sativa
 spring.datasource.password=sativa
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+
 
 jwt.http.request.header=Authorization
 
